# advent-of-code

./: .gitignore
2019/: Cargo.toml  README.md
2019/src/: main.rs
2019/src/days/: day_1.rs  day_10.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  (+1 more)
2020/: Cargo.toml  README.md  new-day.sh
2020/src/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_2.rs  day_20.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  lib.rs  shared.rs
2021/aoc-haskell/: aoc-haskell.cabal  package.yaml
2022/: .gitignore  README.md
2022/aoc_2022/: README.md  mix.exs  new_template.sh
2023/: README.md
2023/day-10/: CMakeLists.txt  example2-d.txt  main.c
2023/day-11/: input.txt  main.php
2023/day-12/: main.rb
2023/day-13/: main.py
2023/day-15/: README.md  day_15.opam  dune-project
2023/day-15/lib/: day_15.ml  dune
2023/day-15/test/: dune
2023/day-16/: Package.swift  README.md
2023/day-2/: README.md  main.zig
2023/day-3/: README.md  day3.cabal  package.yaml
2023/day-4/: main.sh
2023/day-5/: settings.gradle.kts
2023/day-6/: main.dfy
2023/day-7/: .gitignore  build.sbt
2023/day-8/: package-lock.json  package.json
2023/day-9/: README.md  main.awk  test.sh
2024/: Aoc2024.sln  README.md
2024/aoc2024/: Day1.cs  Day2.cs  Day3.cs  Day4.cs  Day5.cs  Day6.cs  Day7.cs  Day8.cs  aoc2024.csproj
2024/aoc2024.Tests/: Day1Test.cs  Day2Test.cs  Day3Test.cs  Day4Test.cs  Day5Test.cs  Day6Test.cs  Day7Test.cs  Day8Test.cs  aoc2024.Tests.csproj
(+67 files in other folders)
